<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_request_access"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterGray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.drulabs.vividvidhi.login.ReqAccessActivity">

    <LinearLayout
        android:id="@+id/req_access_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="16">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pic_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:src="@mipmap/ic_camera_plus"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="@dimen/border_thin"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <org.drulabs.vividvidhi.ui.DruTextInputEditText
                android:id="@+id/req_access_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_name"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <org.drulabs.vividvidhi.ui.DruTextInputEditText
                android:id="@+id/req_access_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_username"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <org.drulabs.vividvidhi.ui.DruTextInputEditText
                android:id="@+id/req_access_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:inputType="numberPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <org.drulabs.vividvidhi.ui.DruTextInputEditText
                android:id="@+id/req_access_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_relationship"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:visibility="invisible"/>-->

        <org.drulabs.vividvidhi.ui.DruButton
            android:id="@+id/req_access_action"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/txt_request_access"/>
    </LinearLayout>

</RelativeLayout>
