<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_small"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="@color/lighterGray"
    app:cardCornerRadius="@dimen/margin_small">

    <RelativeLayout
        android:id="@+id/activity_landing_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_rectangle_overlay"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.drulabs.vividvidhi.landing.LandingPage">

        <org.drulabs.vividvidhi.ui.DruTextView
            android:id="@+id/txt_the_title"
            style="@style/title_poem"
            layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_regular"
            tools:text="@string/very_standard_text"/>

        <FrameLayout
            android:id="@+id/image_item_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_the_title">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:foreground="@drawable/image_gradient_overlay"
                android:scaleType="centerInside"
                android:src="@drawable/ic_face_black_800dp"
                tools:src="@drawable/sample_vivi"/>

            <org.drulabs.vividvidhi.ui.DruTextView
                android:id="@+id/txt_image_credit"
                style="@style/comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left|start"
                android:layout_margin="@dimen/margin_small"
                android:textColor="#FFFFFF"
                tools:text="Writen exclusively for Vidhi by \n Daddy ji"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/poem_text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_item_holder"
            android:layout_marginBottom="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_regular"
            android:background="@drawable/image_gradient_overlay">

            <org.drulabs.vividvidhi.ui.DruTextView
                android:id="@+id/txt_the_poem"
                style="@style/text_poem"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="@dimen/margin_very_small"
                android:layout_below="@+id/image_item_holder"
                tools:text="@string/very_long_text"/>
        </FrameLayout>

        <include
            layout="@layout/likes_comments_no_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/poem_text_holder"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>